add order qurey function

--- a/src/main/resources/templates/seckill_activity.html
+++ b/src/main/resources/templates/seckill_activity.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-	<title>九章秒杀-正品秒杀！</title>
+	<title>正品秒杀！</title>
 	<link rel="icon" href="img/jiuzhanglogo.png">
 
 	<!-- 引入样式 -->
