add order payment and related stock deduction

--- a/src/main/resources/templates/seckill_activity.html
+++ b/src/main/resources/templates/seckill_activity.html
@@ -71,7 +71,7 @@
 									</span>
 								</li>
 								<li class="f-item">
-									<span>网站导航</li>
+									<span>网站导航</span></li>
 							</ul>
 						</div>
 
@@ -150,7 +150,7 @@
 			<ul class="seckill" id="seckill">
 				<!-- iterate every seckill activity -->
 				<tr th:each="seckillActivity : ${seckillActivities}">
-					<li class="seckill-item" >
+C					<li class="seckill-item" >
 						<div class="pic">
 							<img src="img/_/list.jpg" alt=''>
 						</div>
